# pytest_networkx

./: README.md  setup.cfg
src/myproject/tests/: conftest.py
