[metadata]
name = myproject
version = 1.0.0

[options]
package_dir=
	=src
packages=find:
install_requires=
    networkx
    networkx==3.2.1; python_version>="3.9"

[options.packages.find]
where=src

[options.extras_require]
test =
    pytest
    importlib-metadata<5.0; python_version<"3.9"
dev =
    %(test)s
    black
    flake8